tests/qd/errors/error_basic_failure.qd
fn safe_operation(a:i -- result:i)! {
	dup 0 > if {
		dup mul
	} else {
		error
	}
}

fn main() {
	0 safe_operation if {
		"Success: result is " . . nl
	} else {
		drop "Error occurred" . nl
	}
}
